--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
         background-color: #161326;
         color: #fff;
         font-weight: 600px;
+        overflow-x: hidden;
     }
 
     /*Header*/
@@ -14,9 +15,9 @@
         justify-content: space-between;
         padding: 10px;
         background-color: #161326;
-        position: fixed;
         width: 100%;
         z-index: 10;;
+        position: fixed;
     }
 
     .header h3{
@@ -42,7 +43,7 @@
         justify-content: left;
         align-items: right;
         margin-left: auto;
-        margin-right: 10%;
+        margin-right: 8%;
     }
 
     .navigation ul {
